many changes, cleaned code, restructured directory, error checking