@@ -3,11 +3,11 @@ import java.util.*;
 
 import utils.UtilsConversion;
 
-public class Standalone {
+public class Common {
 	
 		//Heuristic Configured Parameters
 		static String driverMemory = ""; 
-		static String executorMemory = ""; 
+		static String executorMemory = "";
 		static String driverCores = "";
 		static String schedulerMode = "";
 		static String coresMax = ""; 
@@ -15,73 +15,56 @@ public class Standalone {
 		static String defaultParallelism = "";
 		static String rddCompress = "false";
 		static String storageLevel = "";
-		static String executorCores = ""; 
-		
-		//not in configuration file, does not work for 1.3.0
-		static String executorInstances = ""; 
+		public static String executorCores = ""; 
+		public static String executorInstances = ""; 
 		
 		//Default Configuration Values
 		//Application Properties
 		static String driverMaxResultSize = "0";
-		static String localDir = "/tmp";
 	
 		//RunTime
 		static String driverExtraJavaOptions = "-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps";
 		static String executorExtraJavaOptions = "-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps";
-		static String pythonProfileDump = ""; //none
-
-		//Shuffle
-		static String shuffleManager = "sort";
-		static String shuffleMemoryFraction = "0.2"; 
-		static String shuffleSafetyFraction = "0.8"; //Not in documentation
 		
 		//Compression and Serialization
-		static String kryoClassesToRegister = ""; //insert kryo classes to register here
-		static String kryoRegistrator = "";
-		static String kyroserializerBufferMax = "64m";
 		static String serializer = "org.apache.spark.serializer.JavaSerializer";
 
 		//Execution Behaviour
-		static String storageMemoryFraction = "0.6"; // storageMemoryFraction + storageUnrollFraction + shuffleMemoryFraction = 1
-		static String storageSafetyFraction = "0.9"; //not in Spark documentation
-		static String storageUnrollFraction = "0.2"; // Fraction of storageMemoryFraction
+		static String storageMemoryFraction = "0.6"; 
+		static String storageSafetyFraction = "0.9";
+		static String storageUnrollFraction = "0.2"; //fraction of storageMemoryFraction
 		
-		//Networking
-		static String akkaTimeout = "100"; //s
-
-		//Scheduling
-		static String localityWait = "3000"; //ms
-		static String schedulerMinRegisteredResourcesRatio = "0.0"; //0.8 for YARN, 0.0 otherwise
-		static String speculation = "false"; //false
-		
-		//Deploy spread mode
-		static String deploySpreadOut = "true"; 
-		
-		//External variables not in Spark but used for configurations
-		
-		static double idealExecutorMemory = 8; //gb
+		//External variables used for configurations
+		public static double idealExecutorMemory = 8; //gb
+		public static double executorMemoryValue = idealExecutorMemory;  
+		public static int numExecutorsPerNode = 0;
 		
 		//System Overhead, OS + Resource Manager (e.g. CM) + other processes running in background
-		static double systemOverheadBuffer = 1.00;
-		static double systemOverheadBufferTier1 = 0.850;
-		static double systemOverheadBufferTier2 = 0.900;
-		static double systemOverheadBufferTier3 = 0.950;
+		public static double systemOverheadBuffer = 1.00;
+		public static double systemOverheadBufferTier1 = 0.850;
+		public static double systemOverheadBufferTier2 = 0.900;
+		public static double systemOverheadBufferTier3 = 0.950;
 
 		//Spark Overhead Buffer
-		static double sparkOverheadBuffer = 1.00;
-		static double sparkOverheadBufferTier1 = 0.800;
-		static double sparkOverheadBufferTier2 = 0.850;
-		static double sparkOverheadBufferTier3 = 0.900;
+		public static double sparkOverheadBuffer = 1.00;
+		public static double sparkOverheadBufferTier1 = 0.850;
+		public static double sparkOverheadBufferTier2 = 0.900;
+		public static double sparkOverheadBufferTier3 = 0.950;
 		
-		static double driverMemorySafetyFraction = 0.90;
-		static double executorUpperBoundLimitG = 64; //gb
+		public static double driverMemorySafetyFraction = 0.80;
+		public static double executorUpperBoundLimitG = 64; //gb
 		static double unserializedFactor = 4; //experimentally determined at ~3
 		static double serializedUncompressedFactor = 0.8; //experimentally determined at ~0.5
 		static double serializedCompressedFactor = serializedUncompressedFactor * 0.8;
 		
 		static double daemonMemoryFraction = 0.15;
-		static double daemonMemoryMin = 0.5; // gb
+		static double daemonMemoryMin = 0.5; //gb
 		static double workerMaxHeapsize = 4;
+		
+		static int numExecutorsPerNodeUpperBound = 4;
+		static int numExecutorsPerNodeLowerBound = 2;
+		
+		static double parallelismFactor = 4;
 		
 		public static void configureStandardSettings(
 				Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable,
@@ -90,8 +73,6 @@ public class Standalone {
 
 			// Set Application Properties
 			setApplicationProperties(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-			// Set RunTime Environment
-			setRunTimeEnvironment(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 			// Set Shuffle Behavior
 			setShuffleBehavior(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 			// Set Compression and Serialization
@@ -102,29 +83,23 @@ public class Standalone {
 			setNetworking(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 			// Set Spread Deploy Mode
 			setDeploySpreadOut(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-			//set executor and driver pointer flags to 32bit if JVM is < 32GB, this will reduce GC time
+			//Set Environment Variable Recommendations
+			setEnvironment(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+			//Set Java Options
 			setExecutorExtraJavaOptions(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 			setDriverExtraJavaOptions(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-
 		}
 		
 		public static void setApplicationProperties(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
 			setExecMemCoresInstances(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable); //this must come after setDriverMemory
 		    setCoresMax(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-			setDriverCores(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setMaxResultSize(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-		    setLocalDir(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-		}
-		
-		public static void setRunTimeEnvironment(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
-		    setPythonProfileDump(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		}
 		
 		public static void setShuffleBehavior(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
 		    setConsolidateFiles(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setShuffleManager(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setShuffleMemoryFraction(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-		    setShuffleSafetyFraction(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setStorageSafetyFraction(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		}
 
@@ -144,19 +119,43 @@ public class Standalone {
 		public static void setNetworking(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
 		    setAkkaTimeout(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setLocalityWait(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-		    setSchedulerMinRegisteredResourcesRatio(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setSchedulerMode(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		    setSpeculation(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		}
-
+		
+		public static void setEnvironment(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
+			setLocalDirEnv(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+		    setWorkerDirEnv(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+		}
+		
 		private static void setExecMemCoresInstances(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+			double resourceFraction = Double.parseDouble(inputsTable.get("resourceFraction"));
 			double memoryPerNode = UtilsConversion.parseMemory(inputsTable.get("memoryPerNode")); //in mb
 			int numNodes = Integer.parseInt(inputsTable.get("numNodes"));
-			int numWorkerNodes = numNodes - 1;
+			int numJobs = (int)(1 / resourceFraction);
+			int numWorkerNodes = numNodes - numJobs;
 			int numCoresPerNode = Integer.parseInt(inputsTable.get("numCoresPerNode"));
-			
 			double memoryPerWorkerNode = memoryPerNode;
 			//Calculate the memory available for raw Spark
+			double rawSparkMemoryPerNode = calculateRawSparkMem(memoryPerWorkerNode);
+			setDaemonMaxHeapSizeRecommendations(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable, rawSparkMemoryPerNode);
+			double effectiveMemoryPerNode = resourceFraction * rawSparkMemoryPerNode;
+			//Calculate and set driver memory + cores
+			setDriverMemory(Integer.toString((int)(effectiveMemoryPerNode * driverMemorySafetyFraction)) , inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+			setDriverCores(inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+			//Calculate and set executor memory + instances
+			int calculatedNumExecutorsPerNode = (int)(effectiveMemoryPerNode / idealExecutorMemory);
+			calculateNumExecsAndMem(calculatedNumExecutorsPerNode, effectiveMemoryPerNode, idealExecutorMemory);
+			setExecutorMemory(Integer.toString((int)executorMemoryValue), optionsTable, recommendationsTable, commandLineParamsTable);
+			setPythonWorkerMemory(Integer.toString((int)executorMemoryValue), optionsTable, recommendationsTable, commandLineParamsTable);
+			setExecutorInstances (Integer.toString(numExecutorsPerNode * numWorkerNodes),  optionsTable, recommendationsTable, commandLineParamsTable);
+			//Calculate and set executor cores
+			int effectiveCoresPerNode = (int) (resourceFraction * numCoresPerNode);
+			int coresPerExecutor =  (int) (effectiveCoresPerNode / numExecutorsPerNode);
+			setExecutorCores(Integer.toString(coresPerExecutor), inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);	
+		}
+		
+		public static double calculateRawSparkMem(double memoryPerWorkerNode) {
 			if (memoryPerWorkerNode <= 50){
 				systemOverheadBuffer = systemOverheadBufferTier1; 
 				sparkOverheadBuffer = sparkOverheadBufferTier1;
@@ -169,35 +168,22 @@ public class Standalone {
 				systemOverheadBuffer = systemOverheadBufferTier3;
 				sparkOverheadBuffer = sparkOverheadBufferTier3;
 			}
-			
-			double rawSparkMemoryPerNode = memoryPerWorkerNode * systemOverheadBuffer * sparkOverheadBuffer;
-			double daemonMemoryPerNode = rawSparkMemoryPerNode * daemonMemoryFraction;
-			daemonMemoryPerNode = Math.max(daemonMemoryPerNode, daemonMemoryMin);
-			insertDaemonMasterMaxHeapSizeRecommendation(Integer.toString((int)(daemonMemoryPerNode)) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable); //this should be less, assumption that Master has more overhead processes
-			insertExecutorTotalMaxHeapsizeRecommendation(Integer.toString((int)daemonMemoryPerNode) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-			insertDaemonWorkerMaxHeapSizeRecommendation(Integer.toString((int)rawSparkMemoryPerNode) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+			return memoryPerWorkerNode * systemOverheadBuffer * sparkOverheadBuffer;
+		}
 		
-			//User input of what fraction of resources of Spark cluster to be used
-			double resourceFraction = Double.parseDouble(inputsTable.get("resourceFraction"));
-			double effectiveMemoryPerNode = resourceFraction * rawSparkMemoryPerNode;
-			
-			setDriverMemory(Integer.toString((int)(effectiveMemoryPerNode * driverMemorySafetyFraction)) , inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
-			
-			int numExecutorsPerNode = 0;
-			int calculatedNumExecutorsPerNode = (int)(effectiveMemoryPerNode / idealExecutorMemory);
-
-			//Calculate Memory per Executor
-			double finalExecutorMemory = idealExecutorMemory;
+		public static void calculateNumExecsAndMem(int calculatedNumExecutorsPerNode, double effectiveMemoryPerNode, double idealExecutorMemory){
+			executorMemoryValue = idealExecutorMemory;
 			boolean recalculateFlag = false;
-			if (calculatedNumExecutorsPerNode > 4){
-				numExecutorsPerNode = 4;
+			
+			if (calculatedNumExecutorsPerNode > numExecutorsPerNodeUpperBound){
+				numExecutorsPerNode = numExecutorsPerNodeUpperBound;
 				recalculateFlag = true;
 			}
-			else if (calculatedNumExecutorsPerNode < 2){
-				numExecutorsPerNode = 2;
+			else if (calculatedNumExecutorsPerNode < numExecutorsPerNodeLowerBound){
+				numExecutorsPerNode = numExecutorsPerNodeLowerBound;
 				recalculateFlag = true;
 			}
-			else{ //2 or 3 or 4
+			else{ 
 				numExecutorsPerNode = calculatedNumExecutorsPerNode;
 				double currMemSizePerNode = idealExecutorMemory * numExecutorsPerNode;
 				double leftOverMemPerNode = effectiveMemoryPerNode - currMemSizePerNode;
@@ -206,36 +192,28 @@ public class Standalone {
 				}
 			}
 			
-			//Re-adjusting Executor Memory
 			if(recalculateFlag){
-				 finalExecutorMemory = effectiveMemoryPerNode/numExecutorsPerNode;
+				executorMemoryValue = effectiveMemoryPerNode/numExecutorsPerNode;
 			}
-			
-			finalExecutorMemory = Math.min(executorUpperBoundLimitG, finalExecutorMemory);
-			
-			//Calculate Cores Per Executor
-			int effectiveCoresPerNode = (int) (resourceFraction * numCoresPerNode);
-			int coresPerExecutor =  (int) (effectiveCoresPerNode / numExecutorsPerNode);
-			executorCores = Integer.toString(coresPerExecutor);
-		    setExecutorCores(executorCores, inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);	
-			setExecutorMemory(Integer.toString((int)finalExecutorMemory) + "g", "", optionsTable, recommendationsTable, commandLineParamsTable);
-			setPythonWorkerMemory(Integer.toString((int)finalExecutorMemory) + "g", "", optionsTable, recommendationsTable, commandLineParamsTable);
-			//Set instances
-			int totalExecutorInstances =  numExecutorsPerNode * numWorkerNodes;
-			setExecutorInstances (Integer.toString(totalExecutorInstances),  optionsTable, recommendationsTable, commandLineParamsTable);
-			
+			executorMemoryValue = Math.min(executorUpperBoundLimitG, executorMemoryValue);
+		}
+
+		private static void setDaemonMaxHeapSizeRecommendations(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, 
+				Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable, double rawSparkMemoryPerNode) {
+			double daemonMemoryPerNode = rawSparkMemoryPerNode * daemonMemoryFraction;
+			daemonMemoryPerNode = Math.max(daemonMemoryPerNode, daemonMemoryMin);
+			insertDaemonMasterMaxHeapSizeRecommendation(Integer.toString((int)(daemonMemoryPerNode)) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable); 
+			insertExecutorTotalMaxHeapsizeRecommendation(Integer.toString((int)daemonMemoryPerNode) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
+			insertDaemonWorkerMaxHeapSizeRecommendation(Integer.toString((int)rawSparkMemoryPerNode) + "g", inputsTable, optionsTable, recommendationsTable, commandLineParamsTable);
 		}
 		
-		private static void setExecutorInstances (String value, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+		public static void setExecutorInstances (String value, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
 			executorInstances = value;
 			optionsTable.put("spark.executor.instances", executorInstances);
 		}
 		
-		private static void setDriverCores(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			double resourceFraction = Double.parseDouble(inputsTable.get("resourceFraction"));
-			String numCoresPerNode = inputsTable.get("numCoresPerNode");
-			double effectiveDriverCores = resourceFraction * Double.parseDouble(numCoresPerNode);
-			driverCores = Integer.toString((int)effectiveDriverCores);
+		public static void setDriverCores(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+			driverCores = inputsTable.get("numCoresPerNode");
 			optionsTable.put("spark.driver.cores", driverCores);
 			commandLineParamsTable.put("--driver-cores", driverCores);
 		}
@@ -244,21 +222,23 @@ public class Standalone {
 			optionsTable.put("spark.driver.maxResultSize", driverMaxResultSize);
 		}
 	
-		private static void setDriverMemory(String value, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+		public static void setDriverMemory(String value, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
 			driverMemory = value + "g";
 			optionsTable.put("spark.driver.memory", driverMemory);
 			commandLineParamsTable.put("--driver-memory", driverMemory);
 		}
 	
-		private static void setExecutorMemory (String value, String recommendation, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+		public static void setExecutorMemory (String value, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+			executorMemory = value + "g";
 			optionsTable.put("spark.executor.memory", value);
-			if (recommendation.length() > 0)
-				recommendationsTable.put("spark.executor.memory", recommendation);
 		}
 	
-		private static void setLocalDir(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.local.dir", localDir);
-			recommendationsTable.put("spark.local.dir", "Ensure this location has TB's of space");
+		private static void setLocalDirEnv(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+			recommendationsTable.put("environment - SPARK_LOCAL_DIRS", "Ensure this location has TB's of space");
+		}
+		
+		private static void setWorkerDirEnv(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+			recommendationsTable.put("environment - SPARK_WORKER_DIR", "Ensure this location has TB's of space");
 		}
 	
 		private static void setDriverExtraJavaOptions(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
@@ -267,7 +247,6 @@ public class Standalone {
 				driverExtraJavaOptions += " -XX:+UseCompressedOops";
 			}
 			optionsTable.put("spark.driver.extraJavaOptions", driverExtraJavaOptions);
-			recommendationsTable.put("spark.driver.extraJavaOptions", "In case of long gc pauses, try adding the following: -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSParallelRemarkEnabled");
 		}
 	
 		private static void setExecutorExtraJavaOptions(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
@@ -276,43 +255,26 @@ public class Standalone {
 				executorExtraJavaOptions += " -XX:+UseCompressedOops";
 			}
 			optionsTable.put("spark.executor.extraJavaOptions", executorExtraJavaOptions);
-			recommendationsTable.put("spark.executor.extraJavaOptions", "In case of long gc pauses, try adding the following: -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSParallelRemarkEnabled");
-		}
-	
-		private static void setPythonProfileDump(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.python.profile.dump", pythonProfileDump);
-			recommendationsTable.put("spark.python.profile.dump","Set directory to dump profile result before driver exiting if desired");
 		}
 		
-		private static void setPythonWorkerMemory (String value, String recommendation, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
+		private static void setPythonWorkerMemory (String value, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
 			optionsTable.put("spark.python.worker.memory", value);
-			if (recommendation.length() > 0)
-				recommendationsTable.put("spark.python.worker.memory", recommendation);	
 		}
 		
 		//Shuffle Behavior	
 		private static void setConsolidateFiles(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			if (inputsTable.get("fileSystem").equals("hdfs")){
-				shuffleConsolidateFiles = "false";
-			}
-			else if (inputsTable.get("fileSystem").equals("ext4") || inputsTable.get("fileSystem").equals("xfs")){
+			if (inputsTable.get("fileSystem").equals("ext4") || inputsTable.get("fileSystem").equals("xfs")){
 				shuffleConsolidateFiles = "true";
 			}
 			optionsTable.put("spark.shuffle.consolidateFiles", shuffleConsolidateFiles);
 		}
 	
 		private static void setShuffleManager(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.shuffle.manager", shuffleManager);
-			recommendationsTable.put("spark.shuffle.manager", "Try Hash instead of default Sort based shuffle to try for better performance.");
+			recommendationsTable.put("spark.shuffle.manager", "In some cases, might want to try Hash instead of default Sort based shuffle for better performance.");
 		}
 	
 		private static void setShuffleMemoryFraction(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.shuffle.memoryFraction", shuffleMemoryFraction);
 			recommendationsTable.put("spark.shuffle.memoryFraction", "Increase this to a max of 0.8 if there is no RDD caching/persistence in the app");
-		}
-	
-		private static void setShuffleSafetyFraction(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.shuffle.safetyFraction", shuffleSafetyFraction);
 		}
 		
 		private static void setStorageSafetyFraction(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
@@ -320,13 +282,11 @@ public class Standalone {
 		}
 		
 		private static void setKryoClassesToRegister(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.kryo.classesToRegister", kryoClassesToRegister);
-			recommendationsTable.put("spark.kryo.classesToRegister", "Register classes with Kryo serializer for better performance");
+			recommendationsTable.put("spark.kryo.classesToRegister", "If you use Kryo serialization, specify list of custom class names to register with Kryo.");
 		}
 	
 		private static void setKyroserializerBufferMax(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.kryoserializer.buffer.max", kyroserializerBufferMax);
-			recommendationsTable.put("spark.kryoserializer.buffer.max", "Increase this if you get a \"buffer limit exceeded\" exception");
+			recommendationsTable.put("spark.kryoserializer.buffer.max", "Increase this if you get a \"buffer limit exceeded\" exception (set size to largest object to be serialized).");
 		}
 	
 		private static void setRddCompress(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
@@ -336,13 +296,12 @@ public class Standalone {
 		private static void setSerializer(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
 			serializer = "org.apache.spark.serializer.KryoSerializer";
 			optionsTable.put("spark.serializer", serializer);
-			recommendationsTable.put("spark.serializer", "If custom classes are used, MUST register the custom classes to Kyro Serializer. "
-					+ "Serialization Debug Info is turned on in Extra Java Options to reflect if class is not registered.");
 		}
 
 		private static void setStorageLevel(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
 			
 			double resourceFraction = Double.parseDouble(inputsTable.get("resourceFraction"));
+			int numJobs = (int)(1/resourceFraction);
 			double numNodes = Double.parseDouble(inputsTable.get("numNodes"));
 			double memoryPerNode = Double.parseDouble(inputsTable.get("memoryPerNode"));
 			double inputDataSize = Double.parseDouble(inputsTable.get("inputDataSize"));
@@ -350,7 +309,7 @@ public class Standalone {
 			double storageMemoryFractionValue = Double.parseDouble((storageMemoryFraction));
 			double storageMemoryAvailableFraction = 1 - Double.parseDouble(storageUnrollFraction);
 			
-			double availableMemory = resourceFraction * (numNodes - 1) * memoryPerNode * storageSafetyFractionValue * storageMemoryFractionValue * storageMemoryAvailableFraction;
+			double availableMemory = resourceFraction * (numNodes - numJobs) * memoryPerNode * storageSafetyFractionValue * storageMemoryFractionValue * storageMemoryAvailableFraction;
 			
 			double inputUnserialized = inputDataSize * unserializedFactor;
 			double inputUncompressedSerialized = inputDataSize * serializedUncompressedFactor;
@@ -372,43 +331,44 @@ public class Standalone {
 		
 		//Execution Behavior
 		public static void setExecutorCores(String value, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.executor.cores", value);
+			executorCores = value;
+			optionsTable.put("spark.executor.cores", executorCores);
 		}
-		
-		//Not set for now, until optimization
+
 		private static void setDefaultParallelism(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			recommendationsTable.put("spark.default.parallelism","Tune it to 10x the num-cores in the system");
+			double resourceFraction = Double.parseDouble(inputsTable.get("resourceFraction"));
+			int numJobs = (int)(1/resourceFraction);
+			int numNodes = Integer.parseInt(inputsTable.get("numNodes"));
+			int numCoresPerNode = Integer.parseInt(inputsTable.get("numCoresPerNode"));
+			int totalCoresAvailable = (int)(numCoresPerNode * (numNodes - numJobs) * resourceFraction);
+			int calculatedParallelism = (int)(parallelismFactor * totalCoresAvailable);
+			defaultParallelism = Integer.toString(calculatedParallelism);
+			optionsTable.put("spark.default.parallelism", defaultParallelism);
+			recommendationsTable.put("spark.default.parallelism","Try doubling this value for potential performance gains. Set the same value in the code. "
+					+ "E.g. sc.textFile( path/to/file, default-parallelism-value)");
 		}
 	
 		private static void setStorageMemoryFraction(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.storage.memoryFraction", storageMemoryFraction);
 			recommendationsTable.put("spark.storage.memoryFraction", "Reduce this to 0.1 if there is no RDD caching/persistence in the app");
 		}
 	
 		private static void setStorageUnrollFraction(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.storage.unrollFraction", storageUnrollFraction);
 			recommendationsTable.put("spark.storage.unrollFraction", "Reduce this to 0.1 if there is no RDD caching/persistence in the app");
 		}
 		
 		//Networking
 		private static void setAkkaTimeout(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.akka.timeout", akkaTimeout);
-			recommendationsTable.put("spark.akka.timeout","Increase if GC pauses cause problem");
+			recommendationsTable.put("spark.akka.timeout", "Increase if GC pauses cause problem");
 		}
 		
-		private static void setCoresMax(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
+		public static void setCoresMax(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable) {
 			int allocateCoresMax = Integer.parseInt(executorCores) * Integer.parseInt(executorInstances);
 			coresMax = Integer.toString(allocateCoresMax);
 			optionsTable.put("spark.cores.max", coresMax);
 		}
 	
 		private static void setLocalityWait(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.locality.wait", localityWait);
 			recommendationsTable.put("spark.locality.wait", "Increase this value if long GC pauses");
-		}
-	
-		private static void setSchedulerMinRegisteredResourcesRatio(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.scheduler.minRegisteredResourcesRatio", schedulerMinRegisteredResourcesRatio);
 		}
 	
 		private static void setSchedulerMode(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
@@ -422,23 +382,22 @@ public class Standalone {
 		}
 	
 		private static void setSpeculation(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			optionsTable.put("spark.speculation", speculation);
 			recommendationsTable.put("spark.speculation", "Set to true if stragglers are found");
 		}
 		
 		private static void setDeploySpreadOut(Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			//Whether the standalone cluster manager should spread applications out across nodes or try to consolidate them onto as few nodes as possible. Spreading out is usually better for data locality in HDFS, but consolidating is more efficient for compute-intensive workloads. 
-			optionsTable.put("spark.deploy.spreadOut", deploySpreadOut);
+			//Whether the standalone cluster manager should spread applications out across nodes or try to consolidate them onto as few nodes as possible. 
+			recommendationsTable.put("spark.deploy.spreadOut", "Spreading out is usually better for data locality in HDFS");
 		}
 		
 		private static void insertExecutorTotalMaxHeapsizeRecommendation (String recommendation, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			recommendationsTable.put("environment - SPARK_WORKER_MEMORY (executor_total_max_heapsize)","Standalone Mode only: Total amount of memory to allow Spark applications to use on the machine: " + recommendation);
+			recommendationsTable.put("CM-environment - SPARK_WORKER_MEMORY (executor_total_max_heapsize)","Standalone Mode only: Total amount of memory to allow Spark applications to use on the machine: " + recommendation);
 		}
 		private static void insertDaemonMasterMaxHeapSizeRecommendation (String recommendation, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			recommendationsTable.put("environment - SPARK_DAEMON_MEMORY (master_max_heapsize)","Standalone Mode only: Total amount of memory to allow Spark applications to use on the machine: " + recommendation);
+			recommendationsTable.put("CM-environment - SPARK_DAEMON_MEMORY (master_max_heapsize)","Standalone Mode only: Total amount of memory to allow Spark applications to use on the machine: " + recommendation);
 		}
 		private static void insertDaemonWorkerMaxHeapSizeRecommendation (String recommendation, Hashtable<String, String> inputsTable, Hashtable<String, String> optionsTable, Hashtable<String, String> recommendationsTable, Hashtable<String, String> commandLineParamsTable){
-			recommendationsTable.put("environment - SPARK_DAEMON_MEMORY (worker_max_heapsize) ","Standalone Mode only: Memory to allocate to the Spark master and worker daemons themselves: " + recommendation);
+			recommendationsTable.put("CM-environment - SPARK_DAEMON_MEMORY (worker_max_heapsize) ","Standalone Mode only: Memory to allocate to the Spark master and worker daemons themselves: " + recommendation);
 		}
 		
 	}
